--- a/app/src/main/res/layout/activity_inventario.xml
+++ b/app/src/main/res/layout/activity_inventario.xml
@@ -7,7 +7,7 @@
     tools:context=".inventario"
     android:orientation="vertical"
     android:gravity="top"
-    android:layout_margin="10dp">
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -18,6 +18,12 @@
         android:textColor="@color/white"
         android:background="@drawable/labels"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
 
 
     <TextView
@@ -30,14 +36,17 @@
         android:background="@drawable/labels"
         android:layout_margin="5dp"
         />
+
     <EditText
         android:id="@+id/TbCodigo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edittext"
-        android:paddingStart="20dp"
+        android:paddingStart="5dp"
         android:singleLine="true"
+        android:focusable="true"
         />
+
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -48,14 +57,17 @@
         android:background="@drawable/labels"
         android:layout_margin="5dp"
         />
+
     <EditText
         android:id="@+id/TbDescripcion"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:padding="5dp"
         android:enabled="false"
         android:background="@drawable/edittext"
 
         />
+
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -66,14 +78,17 @@
         android:background="@drawable/labels"
         android:layout_margin="5dp"
         />
+
     <EditText
         android:id="@+id/TbCantidad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
+        android:padding="5dp"
         android:background="@drawable/edittext"
         android:singleLine="true"
         />
+
     <Button
         android:id="@+id/BtnGuardar"
         android:layout_width="match_parent"
@@ -81,6 +96,7 @@
         android:layout_margin="10dp"
         android:text="GUARDAR"/>
 
+    </LinearLayout>
 
 
 </LinearLayout>
