--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -23,10 +23,11 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <LinearLayout
+        <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ImageView
             android:id="@+id/BtnSinc"
@@ -34,7 +35,8 @@
             android:layout_height="80dp"
             app:srcCompat="@drawable/ic_baseline_sync_24"
             android:background="@drawable/labels"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,7 +48,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+        <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -67,7 +69,9 @@
 
 
     </LinearLayout>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,7 +80,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/BtnRastrear"
@@ -101,7 +106,7 @@
             android:orientation="vertical">
 
             <ImageView
-
+                android:id="@+id/BtnSoporte"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 app:srcCompat="@drawable/ic_baseline_support_agent_24"
@@ -115,13 +120,37 @@
                 />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LyExportar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/BtnExportar"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:srcCompat="@drawable/ic_baseline_move_down_24"
+                android:background="@drawable/labels"
+                android:layout_margin="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Exportar"
+                android:textAlignment="center"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:visibility="gone"/>
 
     <TextView
